rectified lombok issue